fix width of dropdown on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -22,7 +22,7 @@
 html,
 body {
   width: auto !important;
-  overflow-x: hidden !important
+  overflow-x: hidden !important;
 }
 
 @layer base {
@@ -33,10 +33,10 @@ body {
 
 @layer components {
   .dropdown {
-    @apply -left-7.5 mt-2 hidden min-w-max flex-col gap-4 rounded-md border border-stroke bg-white px-8 py-5 shadow-solid-13 duration-300 ease-in dark:border-strokedark dark:bg-black xl:invisible xl:absolute
+    @apply -left-7.5 mt-2 hidden w-full min-w-max flex-col gap-4 rounded-md border border-stroke bg-white px-8 py-5 shadow-solid-13 duration-300 ease-in dark:border-strokedark dark:bg-black xl:invisible xl:absolute
     xl:mt-0 xl:flex xl:w-[250px] xl:translate-y-10 xl:opacity-0
     xl:before:absolute xl:before:-top-1.5 xl:before:left-10 xl:before:h-3 xl:before:w-3 xl:before:rotate-45 xl:before:border-l xl:before:border-t xl:before:border-stroke xl:before:bg-white xl:group-hover:visible xl:group-hover:translate-y-6.5 
-    xl:group-hover:opacity-100 xl:dark:before:border-strokedark xl:dark:before:bg-black;
+    xl:group-hover:opacity-100;
   }
 }
 
@@ -133,7 +133,7 @@ pre {
 }
 
 :root {
-  --momenceColorBackground: #FFFFFF;
+  --momenceColorBackground: #ffffff;
   --momence-primary-400: rgb(165, 131, 103);
   --momence-primary-500: rgb(165, 131, 103);
   --momence-primary-600: #8a6a4f;
